--- a/www.nass.gov.ng/4e7121cbdd047080bd98e4708d51f0685778c8cd.yml
+++ b/www.nass.gov.ng/4e7121cbdd047080bd98e4708d51f0685778c8cd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 17 Jun 2017 23:11:53 GMT
+    - Sun, 18 Jun 2017 16:55:27 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=NCJfdcm0NdhCJjVrHUwwy2; path=/
+    - PHPSESSID=th%2CDyYRQbJ-7B3v0ska160; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 17 Jun 2017 23:11:53 GMT
+recorded_at: Sun, 18 Jun 2017 16:55:27 GMT
