--- a/www.nass.gov.ng/f48bc6229c8c6db7ec2e751c9e18561b98fe3ff6.yml
+++ b/www.nass.gov.ng/f48bc6229c8c6db7ec2e751c9e18561b98fe3ff6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 17 Jun 2017 23:16:30 GMT
+    - Sun, 18 Jun 2017 17:00:08 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=8MwBG2QXsVEG0gK9gSEwa0; path=/
+    - PHPSESSID=UngKh2pOVkAwNSkucaoP%2C2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 17 Jun 2017 23:16:30 GMT
+recorded_at: Sun, 18 Jun 2017 17:00:08 GMT
