--- a/www.nass.gov.ng/4321c2e32defceaea7e2ebbe07a5c99551b5b209.yml
+++ b/www.nass.gov.ng/4321c2e32defceaea7e2ebbe07a5c99551b5b209.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 17 Jun 2017 23:16:49 GMT
+    - Sun, 18 Jun 2017 17:00:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=VCt2XGR%2C4f6BgjWtsVs6x0; path=/
+    - PHPSESSID=bbS6GWxTgNxyo4KVIaoVl2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 17 Jun 2017 23:16:49 GMT
+recorded_at: Sun, 18 Jun 2017 17:00:39 GMT
