--- a/www.nass.gov.ng/69b1a54aa638ff138e9777d0b639c88d194c578a.yml
+++ b/www.nass.gov.ng/69b1a54aa638ff138e9777d0b639c88d194c578a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 17 Jun 2017 23:17:34 GMT
+    - Sun, 18 Jun 2017 17:02:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=MgwDwMzgxwmQdeJ1E60uC3; path=/
+    - PHPSESSID=vpXg0knCdoC1j%2CWBkCkGQ3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 17 Jun 2017 23:17:34 GMT
+recorded_at: Sun, 18 Jun 2017 17:02:26 GMT
