--- a/www.nass.gov.ng/0ad6241705c263122838138a77a5268e44342723.yml
+++ b/www.nass.gov.ng/0ad6241705c263122838138a77a5268e44342723.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 17 Jun 2017 23:18:30 GMT
+    - Sun, 18 Jun 2017 17:03:08 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=gnnX6ng56Iue%2CDY7I5vBS0; path=/
+    - PHPSESSID=TNICsAZU5GJTZ5ky6C%2C-73; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 17 Jun 2017 23:18:30 GMT
+recorded_at: Sun, 18 Jun 2017 17:03:08 GMT
