--- a/www.nass.gov.ng/13d6240a05ee47b606818b0b27aa4075f51c6efa.yml
+++ b/www.nass.gov.ng/13d6240a05ee47b606818b0b27aa4075f51c6efa.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 17 Jun 2017 23:26:00 GMT
+    - Sun, 18 Jun 2017 17:08:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=HS%2CQOQxnylokBujnyWS5E2; path=/
+    - PHPSESSID=DfDnklFqn862E7%2C2yzvi%2C0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 17 Jun 2017 23:26:00 GMT
+recorded_at: Sun, 18 Jun 2017 17:08:22 GMT
