--- a/www.nass.gov.ng/3cba226e760f7d29adf488ea662bf059ef18f042.yml
+++ b/www.nass.gov.ng/3cba226e760f7d29adf488ea662bf059ef18f042.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 17 Jun 2017 23:27:13 GMT
+    - Sun, 18 Jun 2017 17:09:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=r68CU3sE0Wazc%2CZjmaDM23; path=/
+    - PHPSESSID=8ikzI6cG6flEKi3SOrg1O0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 17 Jun 2017 23:27:13 GMT
+recorded_at: Sun, 18 Jun 2017 17:09:57 GMT
