--- a/www.nass.gov.ng/ac7729f6d42fb4c5f9a3634ae8c33c56c2ade3f3.yml
+++ b/www.nass.gov.ng/ac7729f6d42fb4c5f9a3634ae8c33c56c2ade3f3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 17 Jun 2017 23:27:31 GMT
+    - Sun, 18 Jun 2017 17:10:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=yMaXeTs6oF1i%2CR%2CO4AAmy0; path=/
+    - PHPSESSID=OP2EAkl4Y8z3WvT-BJFf32; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 17 Jun 2017 23:27:31 GMT
+recorded_at: Sun, 18 Jun 2017 17:10:15 GMT
