--- a/www.nass.gov.ng/e9b4cee69bbfb51e65473160f50add380372a85f.yml
+++ b/www.nass.gov.ng/e9b4cee69bbfb51e65473160f50add380372a85f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 17 Jun 2017 23:28:54 GMT
+    - Sun, 18 Jun 2017 17:12:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=kIdP-Cl2xqi6m%2Cabc3l7n2; path=/
+    - PHPSESSID=Chf6q5GAHuQ%2CIZwVGzbA90; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 17 Jun 2017 23:28:54 GMT
+recorded_at: Sun, 18 Jun 2017 17:12:48 GMT
