--- a/www.nass.gov.ng/3fa8bcddcd701d4398f33bc5fc782be894584cc0.yml
+++ b/www.nass.gov.ng/3fa8bcddcd701d4398f33bc5fc782be894584cc0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 17 Jun 2017 23:31:50 GMT
+    - Sun, 18 Jun 2017 17:16:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=6374EMV2gF52PqyqKPPHZ3; path=/
+    - PHPSESSID=wYD7gLP%2Cprqk0qVFyvQ0k1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 17 Jun 2017 23:31:50 GMT
+recorded_at: Sun, 18 Jun 2017 17:16:34 GMT
