--- a/www.nass.gov.ng/4d5934314a5e8819ce9460cb9246e778dc278ffd.yml
+++ b/www.nass.gov.ng/4d5934314a5e8819ce9460cb9246e778dc278ffd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 17 Jun 2017 23:32:41 GMT
+    - Sun, 18 Jun 2017 17:16:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=IL50aoSgfciqhekfpAnd%2C0; path=/
+    - PHPSESSID=aUAaunSG4OdvDkVVi6ohv1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 17 Jun 2017 23:32:41 GMT
+recorded_at: Sun, 18 Jun 2017 17:16:53 GMT
