--- a/www.nass.gov.ng/697b0b688170e5b51c1a5d3ceee6c4fa34eb1d49.yml
+++ b/www.nass.gov.ng/697b0b688170e5b51c1a5d3ceee6c4fa34eb1d49.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 17 Jun 2017 23:48:30 GMT
+    - Sun, 18 Jun 2017 17:30:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=gXapdTSzbfwQGZz6LBZ8q0; path=/
+    - PHPSESSID=Ql0ZvTsgHZLOf0%2CTui7a11; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 17 Jun 2017 23:48:30 GMT
+recorded_at: Sun, 18 Jun 2017 17:30:37 GMT
