--- a/www.nass.gov.ng/bf932b469691d5a5f9ba244070a3e0cdd81b4ea1.yml
+++ b/www.nass.gov.ng/bf932b469691d5a5f9ba244070a3e0cdd81b4ea1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 17 Jun 2017 23:49:18 GMT
+    - Sun, 18 Jun 2017 17:31:09 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=q6EkbdlVojMs-i%2CyJE6Bc2; path=/
+    - PHPSESSID=mNRpA%2Cxg6gtmxWtUoWsrm1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 17 Jun 2017 23:49:18 GMT
+recorded_at: Sun, 18 Jun 2017 17:31:09 GMT
