--- a/www.nass.gov.ng/f19366f7fb5112efeee244b98da420d87ddd7414.yml
+++ b/www.nass.gov.ng/f19366f7fb5112efeee244b98da420d87ddd7414.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 17 Jun 2017 23:49:36 GMT
+    - Sun, 18 Jun 2017 17:31:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9Kdi%2CIgac0%2CQAfOWhTt421; path=/
+    - PHPSESSID=9ycLpZ1Fox0eDJcbonSKN2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 17 Jun 2017 23:49:36 GMT
+recorded_at: Sun, 18 Jun 2017 17:31:39 GMT
