--- a/www.nass.gov.ng/f02e2aa51335041bf4055d08c557f3a8010284f5.yml
+++ b/www.nass.gov.ng/f02e2aa51335041bf4055d08c557f3a8010284f5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 17 Jun 2017 23:52:13 GMT
+    - Sun, 18 Jun 2017 17:35:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=qiyyDvbsI5WClwDfLJnI21; path=/
+    - PHPSESSID=%2CXgJAopafmSSsRKxW4UF32; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 17 Jun 2017 23:52:13 GMT
+recorded_at: Sun, 18 Jun 2017 17:35:12 GMT
