--- a/www.nass.gov.ng/8010f57784f2dc84c0457efaa30f4b2e87a93a79.yml
+++ b/www.nass.gov.ng/8010f57784f2dc84c0457efaa30f4b2e87a93a79.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 17 Jun 2017 23:53:20 GMT
+    - Sun, 18 Jun 2017 17:37:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=dRvGt2EM0uJLw%2CufGMz2X0; path=/
+    - PHPSESSID=M2yzIKXQ1-DnvwCWbdFiS0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 17 Jun 2017 23:53:20 GMT
+recorded_at: Sun, 18 Jun 2017 17:37:17 GMT
