--- a/www.nass.gov.ng/a879fdedc2d977a4b906f0f281eb8750914078c8.yml
+++ b/www.nass.gov.ng/a879fdedc2d977a4b906f0f281eb8750914078c8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 00:01:21 GMT
+    - Sun, 18 Jun 2017 17:43:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=pH%2CAXWcJ9KzyWB7bDRdgp3; path=/
+    - PHPSESSID=07zEnEpk46XZcOhPgwsLo3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 00:01:21 GMT
+recorded_at: Sun, 18 Jun 2017 17:43:52 GMT
