--- a/www.nass.gov.ng/2f819bec55413baf1a12ae621161a04d26ce12ad.yml
+++ b/www.nass.gov.ng/2f819bec55413baf1a12ae621161a04d26ce12ad.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 00:02:27 GMT
+    - Sun, 18 Jun 2017 17:44:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=SNSDBzokulyiWT%2CmNAnAx1; path=/
+    - PHPSESSID=-QBw9i1wfhrbAHNWgeeOm3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 00:02:27 GMT
+recorded_at: Sun, 18 Jun 2017 17:44:51 GMT
