--- a/www.nass.gov.ng/a6ecb17b3b74700c23b979f20fc4f58871e37483.yml
+++ b/www.nass.gov.ng/a6ecb17b3b74700c23b979f20fc4f58871e37483.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 00:08:48 GMT
+    - Sun, 18 Jun 2017 17:51:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tWkEUPLKJyoUlbm4sydNY2; path=/
+    - PHPSESSID=-pBQoVD1%2COKGu0FX9wSXq0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 00:08:48 GMT
+recorded_at: Sun, 18 Jun 2017 17:51:33 GMT
