--- a/www.nass.gov.ng/bb4711120a8e408f615d49be27b27612989c613c.yml
+++ b/www.nass.gov.ng/bb4711120a8e408f615d49be27b27612989c613c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 00:10:46 GMT
+    - Sun, 18 Jun 2017 17:54:45 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=wRxtxGFMpk-EcT%2Czpm%2CR62; path=/
+    - PHPSESSID=Z4AWRwrgHbuQcWFXVYlSO2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 00:10:46 GMT
+recorded_at: Sun, 18 Jun 2017 17:54:45 GMT
