--- a/www.nass.gov.ng/0010b4fbce9b158aa94343e072e10f654b40ae35.yml
+++ b/www.nass.gov.ng/0010b4fbce9b158aa94343e072e10f654b40ae35.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 00:11:43 GMT
+    - Sun, 18 Jun 2017 17:56:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-KkVAiKQrPfUYHLlCbhiH1; path=/
+    - PHPSESSID=n%2CnGoQ8USQn57Xmuc0BQ92; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 00:11:43 GMT
+recorded_at: Sun, 18 Jun 2017 17:56:25 GMT
