--- a/www.nass.gov.ng/d4d5104070907d114e61ea79bb2dced335c954cb.yml
+++ b/www.nass.gov.ng/d4d5104070907d114e61ea79bb2dced335c954cb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 00:12:26 GMT
+    - Sun, 18 Jun 2017 17:56:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=qsUPSvU4RS5TY%2CmHzqe102; path=/
+    - PHPSESSID=xdrTjy7scRnkOY8OQ0FA93; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 00:12:26 GMT
+recorded_at: Sun, 18 Jun 2017 17:56:40 GMT
