--- a/www.nass.gov.ng/749667756d609eaac0d25df15185b9fd30c0a373.yml
+++ b/www.nass.gov.ng/749667756d609eaac0d25df15185b9fd30c0a373.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 00:13:51 GMT
+    - Sun, 18 Jun 2017 17:58:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2Cg1VjvYLAMIlhW6xKWhGm2; path=/
+    - PHPSESSID=SYReancPJYKrZW1TMAHjl1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 00:13:51 GMT
+recorded_at: Sun, 18 Jun 2017 17:58:53 GMT
