--- a/www.nass.gov.ng/84c2590e44881040115f27164867c799b981f06c.yml
+++ b/www.nass.gov.ng/84c2590e44881040115f27164867c799b981f06c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 00:17:05 GMT
+    - Sun, 18 Jun 2017 18:00:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=KNKP%2Cye0MIFLmIg0IDt0v2; path=/
+    - PHPSESSID=kWhgVbtLSRkkk6M0gnIOt1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 00:17:05 GMT
+recorded_at: Sun, 18 Jun 2017 18:00:01 GMT
