--- a/www.nass.gov.ng/097917a439e90b8c2a4e796e20254a51fd185aef.yml
+++ b/www.nass.gov.ng/097917a439e90b8c2a4e796e20254a51fd185aef.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 00:17:24 GMT
+    - Sun, 18 Jun 2017 18:00:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=84VSMRml3U%2CqiTvG1wgr72; path=/
+    - PHPSESSID=ovCiu2Z3mVNz7d-XiPf7M2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 00:17:24 GMT
+recorded_at: Sun, 18 Jun 2017 18:00:20 GMT
