--- a/www.nass.gov.ng/e4a50148e8e3676c8b25608b433a6a6a7d28eae4.yml
+++ b/www.nass.gov.ng/e4a50148e8e3676c8b25608b433a6a6a7d28eae4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 00:20:35 GMT
+    - Sun, 18 Jun 2017 18:02:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mqsIhmiHxXozcmvjSuOiy3; path=/
+    - PHPSESSID=N%2CBWsIuA2oyFODrdfFiRL3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 00:20:35 GMT
+recorded_at: Sun, 18 Jun 2017 18:02:58 GMT
