--- a/www.nass.gov.ng/b5f411c7f1c2df9f99f5564f4b3b387cdc91e689.yml
+++ b/www.nass.gov.ng/b5f411c7f1c2df9f99f5564f4b3b387cdc91e689.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 00:21:51 GMT
+    - Sun, 18 Jun 2017 18:04:27 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ORp212xRAiVCyw36QhyP40; path=/
+    - PHPSESSID=50zVuxUZRFshy5%2CCvMcF30; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 00:21:51 GMT
+recorded_at: Sun, 18 Jun 2017 18:04:27 GMT
