--- a/www.nass.gov.ng/ebd13e7ca6585b73968bdd679cbd92ca80c87796.yml
+++ b/www.nass.gov.ng/ebd13e7ca6585b73968bdd679cbd92ca80c87796.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 00:22:36 GMT
+    - Sun, 18 Jun 2017 18:04:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=va%2CUxx48b72T6Zw%2CpP8E12; path=/
+    - PHPSESSID=hWTPGwaBFKoEheGQOYOds3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 00:22:36 GMT
+recorded_at: Sun, 18 Jun 2017 18:04:46 GMT
