--- a/www.nass.gov.ng/d28a062319d965aec4e8390c2de4d8a30f79aaf5.yml
+++ b/www.nass.gov.ng/d28a062319d965aec4e8390c2de4d8a30f79aaf5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 00:23:58 GMT
+    - Sun, 18 Jun 2017 18:06:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ibxgK5nMlyWmMrhBWQdZb0; path=/
+    - PHPSESSID=Q95cJBGAW2o2qGn%2C9NbQn2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 00:23:58 GMT
+recorded_at: Sun, 18 Jun 2017 18:06:06 GMT
