--- a/www.nass.gov.ng/12bbaec08d312ba24f84ad642d3ea60652fe5646.yml
+++ b/www.nass.gov.ng/12bbaec08d312ba24f84ad642d3ea60652fe5646.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 00:32:37 GMT
+    - Sun, 18 Jun 2017 18:15:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Dwy4qiHF0NWg%2CHmOhhbVn2; path=/
+    - PHPSESSID=yX9oa-TrSXvcCe4fTWJAx2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 00:32:37 GMT
+recorded_at: Sun, 18 Jun 2017 18:15:35 GMT
