--- a/www.nass.gov.ng/7af0d70ee72cf343738ffee2fda6e9e01a90917c.yml
+++ b/www.nass.gov.ng/7af0d70ee72cf343738ffee2fda6e9e01a90917c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 00:37:19 GMT
+    - Sun, 18 Jun 2017 18:19:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=RsWVZUvwqA5MI46guVc%2CX0; path=/
+    - PHPSESSID=tg6RJemErhUe3OXYWpyv12; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 00:37:19 GMT
+recorded_at: Sun, 18 Jun 2017 18:19:37 GMT
