--- a/www.nass.gov.ng/48033bba3ab16859844f4b85d0d98756ae78a824.yml
+++ b/www.nass.gov.ng/48033bba3ab16859844f4b85d0d98756ae78a824.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 00:43:56 GMT
+    - Sun, 18 Jun 2017 18:26:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=H0%2CObxOsucxcPufqn5%2Cst1; path=/
+    - PHPSESSID=p9oxCFxIfJaA9IcOR2qxQ1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 00:43:56 GMT
+recorded_at: Sun, 18 Jun 2017 18:26:34 GMT
